force-app/main/default/objects/UserDetail__c/UserDetail__c.object-meta.xml
<CustomObject>
    <label>UserDetail</label>
    <nameField>
        <label>UserDetails  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>