force-app/main/default/objects/UserDetail__c/fields/Passwordd__c.field-meta.xml
<CustomField>
    <fullName>Passwordd__c</fullName>
    <label>Password</label>
    <length>32</length>
    <type>Text</type>
</CustomField>