force-app/main/default/objects/UserDetail__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>